# haskell-hashmap-cache

./: TODO.md  in-memory-hashmap.cabal
app/: Main.hs  Reader.hs
app/Storage/Cache/: Cache.hs  CacheChannel.hs  CacheTH.hs  CacheWorker.hs  Queries.hs
app/Storage/FilterBy/: Album.hs  Artist.hs
app/Storage/Queries/: Album.hs  Artist.hs  CacheQueries.hs  DBQueries.hs
app/Storage/QueriesMiddleware/: Album.hs  Artist.hs
app/Storage/Types/: Album.hs  Artist.hs  Cache.hs  CacheChannel.hs  CacheClass.hs  CacheTH.hs  DB.hs  FilterBy.hs
